--- a/package.json
+++ b/package.json
@@ -24,5 +24,17 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "vite": "^6.0.7"
-  }
+  },
+  "description": "You are developing a social media application and need to display all user posts on the home page.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Aryan241006/using_your_component_assignment_2-.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Aryan241006/using_your_component_assignment_2-/issues"
+  },
+  "homepage": "https://github.com/Aryan241006/using_your_component_assignment_2-#readme"
 }
